# pi-k3s

./: .gitignore  .sops.yaml  AGENTS.md  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: automation_migration_2025-11-04.md  code_style_and_conventions.md  constitution_update_2025-11-05.md  env_constraints.md  project_overview.md  secrets_setup.md  suggested_commands.md  task_completion.md  tool_permissions.md
.specify/.serena/: project.yml
.specify/.serena/memories/: constitution_update_2025-11-04.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
automation/ansible/: .sops.yaml  ansible.cfg  dns.yaml  host-os-apt.yaml  host-os-ubuntu.yaml  k3s-install.yaml  k3s-reboot.yaml  k3s-reset.yaml  k3s-upgrade.yaml  k3s.yaml  network.yaml  requirements.yml  site.yml
automation/ansible/collections/: requirements.yml
automation/ansible/group_vars/all/: network.yml  vault.sops.yml
automation/ansible/inventory/: hosts.yml
automation/scripts/: collect-diff.sh
cluster/base/system/: namespaces.yaml  rbac.yaml  storage.yaml
docs/governance/reviews/: bootstrap-template.md
docs/runbooks/: bootstrap.md  dns-setup.md  hardware.md  secrets-rotation.md
specs/001-deploy-pi-k3s/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-deploy-pi-k3s/checklists/: requirements.md
specs/001-deploy-pi-k3s/contracts/: cluster-operations.openapi.yaml
tests/automation/: test_bootstrap.sh
tests/k8s-diff/: test_baseline.sh
(+25 files in other folders)
